
# This file is a part of Simple-XX/SimpleKernel (https://github.com/Simple-XX/SimpleKernel).
#
# CMakeLists.txt for Simple-XX/SimpleKernel.

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/boot)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/gdt)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/intr)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/debug)