
# This file is a part of Simple-XX/SimpleKernel (https://github.com/Simple-XX/SimpleKernel).
#
# CMakeLists.txt for Simple-XX/SimpleKernel.

PROJECT(mailbox CXX)

aux_source_directory(${mailbox_SOURCE_DIR}/. mailbox_src)
add_library(${PROJECT_NAME} OBJECT ${mailbox_src})

target_include_libc_header_files(${PROJECT_NAME})
target_include_drv_header_files(${PROJECT_NAME})
target_include_arch_header_files(${PROJECT_NAME})
